# Decoding-P300EEG2Word

./: .gitignore  .pre-commit-config.yaml  README.md  env.yaml  main.py  pyproject.toml
app/: code_generator.py  config.py  instructions.py  speller.py  target_window.py  welcome.py
models/: eeg_target_classifier.pth  eeg_target_classifier_1.pth  eeg_target_classifier_2.pth
notebooks/: Classification.ipynb  Target_classification.ipynb  data_prep.ipynb  new_pipline.ipynb  random_sampling_data (1).ipynb  random_sampling_data_real.ipynb
notebooks/old/: Classification.ipynb  Discover.ipynb  data_proc.ipynb
src/: config.py
src/data/: data_generator.py
src/features/: eegdataset.py  neuroinformedeegdataset.py
src/models/: autoencoder.py  csp.py  csp_smote.py  eeg.py  eegnet1d.py  new_pipeline.py  simple_classifier_pipeline.py  simple_classifiers.py  smote.py  train_model.py  vision_transformer.py
src/utils/: get_logger.py
