[project]
name = "Neuro"
version = "0.1.0"
description = "Создание алгоритма пословесного декодирования в нейроинтерфейсе на основе потенциала P300"
authors = [
    {name = "Сидиков Данил Икромжонович", email = "fy.su.80@mail.ru"},
    ]
dependencies = [
    "colorlog==6.7.0",
    "click==8.1.7",
    "tqdm==4.65.0",
    "jupyterlab>=4.4.7",
    "numpy>=2.2.6",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "torch==2.8.0+cu129",
    "ipywidgets>=8.1.7",
    "plotly>=6.3.1",
    "seaborn>=0.13.2",
    "ipympl>=0.9.8",
]
requires-python = "==3.10.4"
readme = "README.md"

[[tool.pdm.source]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
verify_ssl = true
type = "index"

[tool.pdm]
distribution = true


[tool.pdm.dev-dependencies]
ness-dev = [
    "ruff==0.3.5",
    "pre-commit==3.7.1"
]


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.black]
line-length = 79


[tool.ruff]
line-length = 79
fix = false
unsafe-fixes = false
cache-dir = "./.cache/ruff"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D1", "D203", "D205", "D213", "FA102", "ANN101", "FA100",
    "PLR0913", "COM812", "RUF001", "RUF002", "RUF003", "ANN102"
]

[tool.ruff.lint.isort]
no-lines-before = ["standard-library", "local-folder"]
known-third-party = []
known-local-folder = ["ged"]

[tool.ruff.lint.extend-per-file-ignores]
"*__init__.py" = ["F401"]
"tests/*.py" = ["ANN401", "S101", "S311", "FBT001"]
